# procora

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  TODO.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  security.yml  soak.yml
crates/procora-cli/: Cargo.toml
crates/procora-cli/src/: lib.rs  main.rs  project.rs  runtime.rs  session.rs  suggestion.rs  template.rs
crates/procora-cli/tests/: cli.rs  embedded_session.rs
crates/procora-config/: Cargo.toml
crates/procora-config/src/: dependency.rs  discovery.rs  error.rs  lib.rs  loader.rs  raw.rs
crates/procora-config/tests/: dependencies.rs  diagnostics.rs  discovery.rs  formats.rs
crates/procora-core/: Cargo.toml
crates/procora-core/src/: graph.rs  lib.rs  spec.rs
crates/procora-core/tests/: service_name.rs  task_graph.rs
crates/procora-daemon/: Cargo.toml
crates/procora-daemon/src/: center.rs  host.rs  host_logs.rs  host_view.rs  ipc.rs  lib.rs  managed.rs  project.rs  status.rs
crates/procora-daemon/tests/: center.rs  ipc.rs  task_runtime.rs
crates/procora-engine/: Cargo.toml
crates/procora-engine/src/: engine.rs  lib.rs
crates/procora-engine/tests/: event_loop.rs  initial_state.rs
crates/procora-log/: Cargo.toml
crates/procora-log/src/: file_store.rs  lib.rs
crates/procora-log/tests/: file_store.rs  tail_buffer.rs
crates/procora-monitor/: Cargo.toml
crates/procora-monitor/tests/: process_tree.rs
crates/procora-platform/: Cargo.toml
crates/procora-platform/src/: autostart.rs  systemd.rs
crates/procora-platform/src/autostart/: render.rs
crates/procora-platform/tests/: autostart.rs  capabilities.rs
crates/procora-process/: Cargo.toml
crates/procora-process/src/: lib.rs
crates/procora-process/tests/: managed_process.rs
crates/procora-protocol/: Cargo.toml
crates/procora-protocol/src/: lib.rs
crates/procora-source/: Cargo.toml
crates/procora-source/src/: archive.rs  download.rs  lib.rs  manager.rs  verify.rs
crates/procora-source/tests/: dependency_manager.rs
crates/procora-storage/: Cargo.toml
crates/procora-tui/: Cargo.toml
crates/procora-tui/src/: app.rs  config_editor.rs  config_ui.rs  lib.rs  ui.rs
crates/procora-tui/tests/: app_interaction.rs  config_editor.rs  render.rs
crates/procora-tui/tests/support/: mod.rs
docs/: README.md  architecture.md  cli.md  configuration.md  dependencies.md  example.md  mcp.md  observability.md  platform.md  process-compose-study.md  release.md  roadmap.md  runtime.md  testing.md
docs/adr/: 0001-versioning-and-compatibility.md
scripts/: check-runtime-deps.ps1  check-runtime-deps.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: lib.rs  main.rs  mcp.rs
src/cli/: api.rs  autostart_command.rs  center_runtime.rs  elevation.rs  logs.rs  mod.rs  project.rs  runtime.rs  session.rs  source.rs  suggestion.rs  template.rs
src/config/: dependency.rs  diff.rs  discovery.rs  duration.rs  error.rs  format.rs  health.rs  loader.rs  mod.rs  origin.rs  python.rs  raw.rs  task_defaults.rs  upload.rs
src/core/: graph.rs  id.rs  mod.rs  service.rs  spec.rs
src/daemon/: center.rs  health.rs  host.rs  host_logs.rs  host_view.rs  ipc.rs  managed.rs  mod.rs  project.rs  resources.rs  status.rs
src/engine/: mod.rs  restart.rs  runtime.rs  state.rs
src/log/: file_store.rs  mod.rs
src/monitor/: mod.rs
src/platform/: autostart.rs  mod.rs  systemd.rs
src/process/: helper.rs  mod.rs
src/protocol/: mod.rs
src/source/: archive.rs  download.rs  git.rs  manager.rs  mod.rs  placeholders.rs  revision.rs  verify.rs
src/storage/: center.rs  mod.rs
src/transfer/: archive.rs  mod.rs  protocol.rs  receive.rs  remote.rs  target.rs
src/tui/: app.rs  app_horizontal.rs  config_dependency.rs  config_dependency_dialog.rs  config_dialog_ui.rs  config_directory_picker.rs  config_editor.rs  config_exit.rs  config_form.rs  config_form_defaults.rs  config_form_dialog.rs  config_form_exit.rs  config_form_field.rs  config_form_serialize.rs  config_form_state.rs  config_form_value.rs  config_form_yaml.rs  config_health_dialog.rs  config_help_ui.rs  config_highlight.rs  config_map_dialog.rs  config_profile.rs  config_runner.rs  config_task_defaults.rs  config_task_dialog.rs  config_ui.rs  config_ui_support.rs  help_ui.rs  key_hints.rs  live_editor.rs  log_filter_ui.rs  log_source.rs  log_view.rs  mod.rs  new_service_wizard.rs  overview_app.rs  overview_collection.rs  overview_ui.rs  selection.rs  text_view.rs  (+5 more)
tests/: app_interaction.rs  autostart.rs  capabilities.rs  center.rs  center_update.rs  cli.rs  cli_commands.rs  cli_git_source.rs  cli_reload.rs  cli_usability.rs  command_text.rs  config_compatibility.rs  config_diff.rs  config_editor.rs  config_reload.rs  config_usability.rs  dependencies.rs  dependency_manager.rs  dependency_syntax.rs  diagnostics.rs  discovery.rs  documentation_examples.rs  durations.rs  embedded_session.rs  env_files.rs  event_loop.rs  exit_codes.rs  file_store.rs  formats.rs  git_source.rs  health_checks.rs  includes.rs  initial_state.rs  ipc.rs  log_stress.rs  mac_cascade_e2e.rs  managed_process.rs  mcp.rs  new_service.rs  overview.rs  (+20 more)
tests/cli/: center_update.rs  cli.rs  cli_commands.rs  cli_reload.rs  cli_uploads.rs  main.rs  new_service.rs
tests/config/: config_compatibility.rs  dependency_syntax.rs  discovery.rs  durations.rs  formats.rs  includes.rs  main.rs  profiles.rs  properties.rs  python_config.rs  task_defaults.rs  task_templates.rs  uploads.rs
tests/fixtures/: basic.yaml
tests/platform/: capabilities.rs  main.rs  systemd.rs  windows_paths.rs
tests/project/: documentation_examples.rs  install_scripts.rs  main.rs  release_workflow.rs  test_conventions.rs
tests/runtime/: center.rs  dependency_manager.rs  event_loop.rs  exit_codes.rs  file_store.rs  git_source.rs  health_checks.rs  ipc.rs  main.rs  remote_downloads.rs  soak.rs  tail_buffer.rs  task_runtime.rs  uploads.rs
tests/support/: command.rs  http.rs  mod.rs
tests/tui/: app_interaction.rs  config_editor.rs  main.rs  overview.rs  render.rs  tui_remote_dependencies.rs
(+43 files in other folders)
