[package]
name = "procora"
version = "0.3.2"
edition = "2024"
rust-version = "1.95"
publish = false

[features]
default = []
systemd = ["dep:sd-notify", "dep:zbus_systemd"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6"
crossterm = "0.29"
directories = "6.0"
flate2 = "1.1.9"
fs2 = "0.4.3"
interprocess = { version = "2.4.2", features = ["tokio"] }
notify = "8.2"
petgraph = { version = "0.8.3", default-features = false, features = ["graphmap", "std"] }
process-wrap = { version = "9.1.0", default-features = false, features = ["creation-flags", "job-object", "kill-on-drop", "process-group", "process-session", "std", "tokio1", "tracing"] }
ratatui = "0.30.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rustix = { version = "1.0", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = { version = "0.0.29", default-features = false, features = ["deserialize"] }
serde_json = "1.0"
serde_path_to_error = "0.1.20"
sha2 = "0.10"
strsim = "0.11"
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.52.3", features = ["io-util", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = { version = "2.12", default-features = false, features = ["tls"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
widestring = "1.2"
zip = { version = "4.6", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = { version = "0.5", optional = true }
zbus_systemd = { version = "0.26100.0", features = ["systemd1", "zbus-async-tokio"], optional = true }

[profile.release]
lto = "thin"
strip = "symbols"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
