[package]
name = "procora-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "procora"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
procora-config = { path = "../procora-config" }
procora-core = { path = "../procora-core" }
procora-daemon = { path = "../procora-daemon" }
procora-platform = { path = "../procora-platform" }
procora-protocol = { path = "../procora-protocol" }
procora-source = { path = "../procora-source" }
procora-tui = { path = "../procora-tui" }
process-wrap = { workspace = true, features = ["std"] }
strsim.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
