[package]
name = "procora-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
procora-core = { path = "../procora-core" }
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde-saphyr.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
