[package]
name = "procora-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
fs2.workspace = true
interprocess.workspace = true
procora-config = { path = "../procora-config" }
procora-core = { path = "../procora-core" }
procora-engine = { path = "../procora-engine" }
procora-log = { path = "../procora-log" }
procora-monitor = { path = "../procora-monitor" }
procora-platform = { path = "../procora-platform" }
procora-process = { path = "../procora-process" }
procora-protocol = { path = "../procora-protocol" }
procora-source = { path = "../procora-source" }
procora-storage = { path = "../procora-storage" }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync"] }
tracing.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[target.'cfg(windows)'.dependencies]
widestring.workspace = true

[lints]
workspace = true
