[package]
name = "procora-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
systemd = ["dep:sd-notify", "dep:zbus_systemd"]

[dependencies]
directories.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = { workspace = true, optional = true }
zbus_systemd = { workspace = true, optional = true }

[lints]
workspace = true
