[package]
name = "procora-source"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
flate2.workspace = true
notify.workspace = true
procora-config = { path = "../procora-config" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
ureq.workspace = true
zip.workspace = true

[lints]
workspace = true
